load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "colenc",
    srcs = ["encode.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/colenc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/col/coldata",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/roachpb",
        "//pkg/sql/catalog",
        "//pkg/sql/catalog/catalogkeys",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/row",
        "//pkg/sql/rowenc",
        "//pkg/sql/rowenc/valueside",
        "//pkg/sql/sem/catid",
        "//pkg/sql/sem/tree",
        "//pkg/sql/types",
        "//pkg/util/encoding",
        "//pkg/util/log",
        "@com_github_cockroachdb_errors//:errors",
    ],
)
