load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "colenc",
    srcs = [
        "encode.go",
        "inverted.go",
        "legacy.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/colenc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/col/coldata",
        "//pkg/keys",
        "//pkg/roachpb",
        "//pkg/sql/catalog",
        "//pkg/sql/catalog/catalogkeys",
        "//pkg/sql/catalog/catpb",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/row",
        "//pkg/sql/rowenc",
        "//pkg/sql/rowenc/keyside",
        "//pkg/sql/rowenc/valueside",
        "//pkg/sql/sem/catid",
        "//pkg/sql/sem/tree",
        "//pkg/sql/types",
        "//pkg/util/encoding",
        "//pkg/util/json",
        "//pkg/util/log",
        "@com_github_cockroachdb_errors//:errors",
    ],
)

go_test(
    name = "colenc_test",
    srcs = [
        "encode_test.go",
        "main_test.go",
    ],
    deps = [
        ":colenc",
        "//pkg/base",
        "//pkg/col/coldata",
        "//pkg/keys",
        "//pkg/roachpb",
        "//pkg/security/securityassets",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/settings",
        "//pkg/sql/catalog",
        "//pkg/sql/catalog/desctestutils",
        "//pkg/sql/colconv",
        "//pkg/sql/randgen",
        "//pkg/sql/row",
        "//pkg/sql/sem/tree",
        "//pkg/sql/types",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/sqlutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/randutil",
        "//pkg/util/timeutil/pgdate",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_stretchr_testify//require",
    ],
)
